--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@
 
   /* Fuentes */
 
-  --fuente-1: "Cookie", cursive;
-  --fuente-2: "Open Sans", sans-serif;
+  --fuente-1: "Tangerine", cursive;
+  --fuente-2: "EB Garamond", serif;
 
   /* font-family: 'Cookie', cursive;
     font-family: 'Open Sans', sans-serif; */
@@ -232,7 +232,7 @@ section.portada .content-portada span.fecha {
   width: 100%;
   font-family: var(--fuente-2);
   font-weight: 300;
-  font-size: 25px;
+  font-size: 27px;
   color: #fff;
 }
 
@@ -258,6 +258,7 @@ section.portada .content-portada h1 {
   width: 100%;
   text-align: center;
   font-family: var(--fuente-1);
+  font-weight: 700;
   font-size: 130px;
 }
 
@@ -278,6 +279,7 @@ section.portada .box-nombres-fecha-portada h1 span {
   line-height: 60px;
   font-size: 40px;
   font-family: var(--fuente-1);
+  font-weight: 700;
   font-weight: 300;
   color: var(--color-1);
 }
@@ -354,6 +356,9 @@ section.cuenta-regresiva .box-aros .box-circulo {
   -webkit-box-shadow: 0px 0px 15px -1px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 0px 0px 15px -1px rgba(0, 0, 0, 0.4);
   box-shadow: 0px 0px 15px -1px rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 section.cuenta-regresiva .box-aros .box-circulo span.falta {
@@ -375,6 +380,9 @@ section.cuenta-regresiva .box-aros .box-circulo .corazon-falta {
 section.cuenta-regresiva .reloj {
   margin-top: 10px;
   margin-bottom: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 section.cuenta-regresiva .reloj-col {
@@ -382,15 +390,21 @@ section.cuenta-regresiva .reloj-col {
   border-right: 1px solid #ccc;
   padding: 0 8px;
   float: left;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 section.cuenta-regresiva .reloj-col.no-border {
   border: none;
+  padding-left: 10%;
+}
+
+section.cuenta-regresiva .reloj-col.dias {
+  padding-right: 10%;
 }
 
 section.cuenta-regresiva .reloj-col span.number {
-  display: inline-block;
-  width: 100%;
   color: var(--color-6);
   font-family: var(--fuente-2);
   font-weight: 700;
@@ -398,8 +412,6 @@ section.cuenta-regresiva .reloj-col span.number {
 }
 
 section.cuenta-regresiva .reloj-col span.time {
-  display: inline-block;
-  width: 100%;
   color: var(--color-7);
   font-family: var(--fuente-2);
   font-size: 20px;
@@ -472,6 +484,7 @@ section.ceremonia-fiesta .col-fiesta .anim-fiesta {
 section.ceremonia-fiesta .col-ceremonia h3,
 section.ceremonia-fiesta .col-fiesta h3 {
   font-family: var(--fuente-1);
+  font-weight: 700;
   font-size: 40px;
   color: #fff;
   background-color: var(--color-2);
@@ -520,7 +533,7 @@ section.ceremonia-fiesta .info-col .info-box {
 section.ceremonia-fiesta .info-col .info-box h6 {
   font-family: var(--fuente-2);
   color: var(--color-2);
-  font-size: 25px;
+  font-size: 27px;
   font-weight: 700;
 }
 
@@ -836,6 +849,7 @@ section.footer h4 {
   width: 100%;
   text-align: center;
   font-family: var(--fuente-1);
+  font-weight: 700;
   font-size: 85px;
   color: var(--color-2);
 }
@@ -1054,7 +1068,7 @@ footer p a:hover {
 }
 
 #modalAsistencia .modal-header .modal-title {
-  font-size: 25px;
+  font-size: 27px;
 }
 
 #modalAsistencia .modal-footer {
@@ -1098,7 +1112,7 @@ footer p a:hover {
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  line-height: 40px;
+  /* line-height: 40px; */
   background-color: var(--color-2);
   opacity: 1;
   outline: none;
@@ -1129,7 +1143,7 @@ footer p a:hover {
 }
 
 #modalAsistencia .form-control {
-  font-size: 15px;
+  font-size: 16px;
 }
 
 /* Modal Sugerir cancion */
@@ -1160,7 +1174,7 @@ footer p a:hover {
 }
 
 #modalSugerirCancion .modal-header .modal-title {
-  font-size: 25px;
+  font-size: 27px;
 }
 
 #modalSugerirCancion .modal-footer {
@@ -1192,7 +1206,7 @@ footer p a:hover {
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  line-height: 40px;
+  /* line-height: 40px; */
   background-color: var(--color-2);
   opacity: 1;
   outline: none;
@@ -1223,7 +1237,7 @@ footer p a:hover {
 }
 
 #modalSugerirCancion .form-control {
-  font-size: 15px;
+  font-size: 16px;
 }
 
 /* ---------- */
@@ -1244,7 +1258,7 @@ footer p a:hover {
 }
 
 #modalTips .modal-header .modal-title {
-  font-size: 25px;
+  font-size: 27px;
 }
 
 #modalTips .modal-footer {
@@ -1276,7 +1290,7 @@ footer p a:hover {
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  line-height: 40px;
+  /* line-height: 40px; */
   background-color: var(--color-2);
   opacity: 1;
   outline: none;
@@ -1323,7 +1337,7 @@ footer p a:hover {
 }
 
 #modalRegalos .modal-header .modal-title {
-  font-size: 25px;
+  font-size: 27px;
 }
 
 #modalRegalos .modal-footer {
@@ -1350,7 +1364,7 @@ footer p a:hover {
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  line-height: 40px;
+  /* line-height: 40px; */
   background-color: var(--color-2);
   opacity: 1;
   outline: none;
@@ -1402,7 +1416,7 @@ footer p a:hover {
 }
 
 #modalMapa .modal-header .modal-title {
-  font-size: 25px;
+  font-size: 27px;
 }
 
 #modalMapa .modal-footer {
@@ -1429,7 +1443,7 @@ footer p a:hover {
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  line-height: 40px;
+  /* line-height: 40px; */
   background-color: var(--color-2);
   opacity: 1;
   outline: none;
@@ -1545,14 +1559,14 @@ footer p a:hover {
   background-color: #fff;
 }
 
-.link{
+.link {
   color: var(--color-2);
-  &:hover{
+  &:hover {
     color: var(--color-2);
   }
 }
 
-.iban-msj{
+.iban-msj {
   font-style: italic;
   color: lightgray;
 }
