--- a/css/style.css
+++ b/css/style.css
@@ -776,7 +776,7 @@ section.fiesta .item-fiesta .hojas-musica {
 /* Regalos */
 
 section.regalos {
-  background: url("../img/img_texturaFondo.jpg") left top repeat var(--color-4);
+  /* background: url("../img/img_texturaFondo.jpg") left top repeat var(--color-4); */
   padding-top: 14%;
   position: relative;
   padding-bottom: 10%;
@@ -864,7 +864,7 @@ section.instagram:after {
 
 section.footer {
   position: relative;
-  background: url("../img/img_texturaFondo.jpg") left top repeat var(--color-4);
+  /* background: url("../img/img_texturaFondo.jpg") left top repeat var(--color-4); */
   padding-bottom: 10%;
   padding-top: 10%;
   margin-top: -2px;
